[tool.poetry]
name = "kaseq4-bug-tracker"
version = "0.1.0"
description = ""
authors = ["Benjamin Mark <benjmark@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.8"
gunicorn = "^20.0.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.1"
autopep8 = "^1.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
